--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-  <p>MineHunter game</p>
+  <div class="main">
+    <h1>MineHunter</h1>
+    <div class="gamecontainer" >
+
+    </div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="js/main.js"></script>
 
