Update Bomb generation

--- a/index.html
+++ b/index.html
@@ -13,18 +13,7 @@
   <![endif]-->
   <div class="main">
     <h1>MineHunter</h1>
-    <div class="gamecontainer" id="game" >
-      <div ></div>
-      
-      <div ></div>
-      <div ></div>
-      <div ></div>
-      <div ></div>
-      <div ></div>
-      <div ></div>
-      <div ></div>
-      <div ></div>
-    </div>
+    <div class="gamecontainer" id="game" ></div>
     <div class="buttoncontainer">
       <select id="level">
         <option value=1>Easy</option>
