Added game over logic

--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
       </select>
       <button id="new">New Game</button>
     </div>
+    <div id="result">
+      <div id="win" >You Won</div>
+      <div id="gameover" >Game Over</div>
+    </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="js/main.js"></script>
-
 </body>
 </html>
