--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h1>MineHunter</h1>
     <div class="gamecontainer" id="game" ></div>
     <div class="buttoncontainer">
+      <p>Score : <span id="score">0</span></p>
       <select id="level">
         <option value=1>Easy</option>
         <option value=2>Medium</option>
