--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="gamecontainer" id="game" ></div>
     <div class="buttoncontainer">
       <p>Score : <span id="score">0</span></p>
+      <p>Your High Score : <span id="highscore">0</span></p>
       <select id="level">
         <option value=1>Easy</option>
         <option value=2>Medium</option>
